Fix left menu on mobile

--- a/_dev/src/sass/partials/_mobile.scss
+++ b/_dev/src/sass/partials/_mobile.scss
@@ -43,11 +43,17 @@ body {
       visibility: visible;
     }
   }
+  .logo {
+    padding: 6px 0;
+    img {
+      height: 30px;
+    }
+  }
 }
 
 .article-nav {
   height: auto;
-  min-height: calc(100vh - 140px);
+  min-height: calc(100vh - 160px);
 }
 
 .site-wrapper {
